# convo-craft

./: .gitignore  README.md  pyproject.toml
scratch_space/llm_/: openai_config.ipynb  sample.ipynb
scratch_space/streamlit_/: button_bank.py
scratch_space/structured/: openai_sample.py  sample.ipynb
src/convo_craft/app/: app.py
src/convo_craft/config/: convo_craft_config.py  paths.py  types.py
src/convo_craft/llm/: conversation_generator.py  converse.py  paragraph_splitter.py  split_paragraph.py  split_sentence.py  topic_picker.py  translate.py  translator.py
src/convo_craft/text/: split_sentence.py
src/convo_craft/utils/: u_pathlib.py  u_pydantic.py
tests/config/: test_paths.py  test_vscode_env.py
tests/text/: test_split_sentence.py
webapp/streamlit/: st_app.py
