[tool.poetry]
name = "convo-craft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "convo_craft", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
loguru = "^0.7.2"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3
